--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -31,7 +31,7 @@ jobs:
       run: ./vendor/bin/phpunit
 
     - name: Psalm
-      run: ./vendor/bin/psalm --show-info=false --threads=8 --diff
+      run: ./vendor/bin/psalm --show-info=true --threads=8 --diff
 
     - name: PHPCS
       run: ./vendor/bin/phpcs -s --report-source --runtime-set ignore_warnings_on_exit 1
